# dockerized-superAdam

./: README.md  docker-compose.yml
BNReduction/: BNReduction.sh
BNReduction/doc/: INSTRUCTIONS.txt  TO_DO.txt  sample-input.json  sample-input_BNreduction.txt  sample-output.json  sample-output_BNreduction.txt
BNReduction/src/: FPGB.m2  Makefile
BNReduction/src/BuildAndNot/: BuildAndNot.cpp  BuildAndNot_old.cpp  Makefile  README
BNReduction/src/BuildAndNot/.libs/: BuildAndNot  ToAndNot  example  lt-BuildAndNot
BNReduction/src/MapFixedPoints/: Makefile  MapFixedPoints.cpp  README  redAN.txt  th.dat.red
BNReduction/src/NetReductionBoost/: Makefile  NetReduction.cpp  Output.red  README  TODOLIST  acyclic1.txt  acyclic2.txt  constant1.txt  constant2.txt  constant3.txt  constant4.txt  constant5.txt  example10.txt  example11.txt  example3.txt  example4.txt  example5.txt  example6.txt  example8.txt  example9.txt  r.txt  r1.txt  reduced.txt  temp2  th.txt  zeronodes1.txt
BNReduction/src/ToPolynomial/: Makefile  ToPolynomial.cpp
BNReduction/src/boolstuff-0.1.13/: AUTHORS  Makefile.am  Makefile.in  NEWS  README  THANKS  aclocal.m4  autogen.sh  boolstuff-0.1.pc.in  boolstuff-0.1.spec.in  bootstrap  configure  configure.ac
BNReduction/src/boolstuff-0.1.13/doc/: booldnf.1  boolstuff.3
BNReduction/src/boolstuff-0.1.13/examples/: Makefile.am  Makefile.in  example.cpp  non-string-nodes.cpp  test-booldnf.pl
BNReduction/src/boolstuff-0.1.13/macros/: ac_compile_warnings.m4  ac_cxx_have_sstream.m4  ac_cxx_have_std.m4  ac_cxx_namespaces.m4  ac_prog_perl_modules.m4  getopt_long.m4
BNReduction/src/boolstuff-0.1.13/src/: Makefile.am  Makefile.in
BNReduction/src/boolstuff-0.1.13/src/boolstuff/: Makefile.am  Makefile.in  boolstuff.dox  c-api.cpp  check-test-cases.pl  checkc.c  checkdnf.cpp  test-cases.txt
BNReduction/src/boolstuff-0.1.13/src/commands/: Makefile.am  Makefile.in  booldnf.cpp
BNReduction/test/CorrectFPoints/: smallBN.dat.fp  th.dat.fp
BNReduction/test/Examples/: smallBN.dat.red  th.dat.red  th_nofixedpoints.dat.red  th_one_fixedpoint.dat.fp  th_one_fixedpoint.dat.red
REACT/: Dockerfile  README.md  README.txt  run.rb
REACT/algorun/: React.rb  Server.rb  Task.rb
REACT/algorun/web/: index.html
REACT/doc/: doc-input.txt  doc-output.txt  doc-react.txt  sample-output.json
REACT/test/: README.txt
REACT/test/test1/: OutputComputations_Example1.xlsx  REACT_Input_Example1.json  REACT_Output_Example1.json  REACT_Output_Reference1.json  raw_output_example.txt
REACT/test/test2/: REACT_Input_Example2.json  REACT_Output_Reference2.json
REACT/test/test3/: REACT_Input_Example3.json  REACT_Output_Reference3.json
RandomSampling/: Dockerfile  README.txt  run.rb
RandomSampling/algorun/: RandomSampling.rb  Server.rb
RandomSampling/algorun/web/: index.html
RandomSampling/algorun/web/js/: algorun.js
RandomSampling/doc/: doc-RandomSampling.txt  doc-input.txt  doc-output.txt
RandomSampling/src/: RandomSampling.pl
RandomSampling/test/test1/: README.txt  sample-input.json  sample-output.json
RandomSampling/test/test2/: README.txt  sample-input.json  sample-output.json
RandomSampling/test/test3/: README.txt  sample-input.json  sample-output.json
SDDS/: Dockerfile  README.txt  run.rb
SDDS/algorun/: Sdds.rb  Server.rb  Task.rb
SDDS/algorun/web/: index.html
SDDS/doc/: doc-SDDS.txt  doc-input.txt  doc-output.txt  sample-input.json
SDDS/src/: Makefile  SDDS.pl
SDDS/test/: api_call_test.rb
SDDS/test/test1/: README.txt  sample-input.json  sample-output.json
SDDS/test/test2/: README.txt  sample-input.json  sample-output.json
SDDS/test/test3/: README.txt  sample-input.json  sample-output.json
